--- a/index.html
+++ b/index.html
@@ -11,201 +11,114 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #f0f0f0;
-      max-width: 100vw;
-      min-height: 100vh;
-      font-size: 17px;
-    }
-    .container {
-      max-width: 430px;
-      margin: auto;
-      background: #fff;
-      border-radius: 18px;
-      box-shadow: 0 4px 16px #bbb8;
-      padding: 18px 6px 24px;
-      min-height: 100vh;
-    }
-    input, button, textarea {
-      font-size: 17px;
-      margin: 7px 0;
-      padding: 10px 8px;
-      border-radius: 10px;
-      border: 1px solid #ddd;
-    }
-    input:focus, textarea:focus {
-      border: 1.5px solid #4387fd;
-      outline: none;
-    }
-    button {
-      background: #4387fd;
-      color: #fff;
-      border: none;
-      font-weight: bold;
-      margin-left: 5px;
-      min-width: 46px;
-      min-height: 40px;
-      cursor: pointer;
-      box-shadow: 0 2px 8px #bbb4;
-    }
+    body { font-family: Arial, sans-serif; margin: 0; background: #f0f0f0; font-size: 16px; }
+    .container { max-width: 430px; margin: auto; background: #fff; border-radius: 12px; padding: 18px; }
+    input, button, textarea { font-size: 16px; margin: 6px 0; padding: 8px; border-radius: 6px; border: 1px solid #ccc; }
+    button { background: #4387fd; color: #fff; font-weight: bold; border: none; cursor: pointer; padding: 8px 14px; }
     button:active { background: #3066b2; }
-    h2 { text-align: center; margin-bottom: 16px; }
-    .row {
-      display: flex;
-      align-items: center;
-      margin-bottom: 12px;
-      gap: 6px;
-      flex-wrap: wrap;
-    }
-    .label { width: 120px; min-width: 90px; flex-shrink: 0; }
-    #maKH, #tenKH, #soTien, #nguoiThuTien {
-      flex: 1; min-width: 0; background: #f8f8f8;
-    }
-    #hoaDon {
-      width: 100%;
-      min-height: 180px;
-      border: 2px solid #000;
-      border-radius: 13px;
-      padding: 14px 7px;
-      white-space: pre-wrap;
-      font-size: 17px;
-      font-family: "Times New Roman", serif;
-      margin-bottom: 12px;
-      background: #faf9f7;
-      box-shadow: 0 2px 8px #eee;
-      text-align: left;
-    }
-    .action-btns {
-      display: flex;
-      gap: 10px;
-      justify-content: center;
-      margin-bottom: 18px;
-    }
-    .history-area {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      margin-top: 12px;
-    }
-    #lichSuIn, #lichSuThu {
-      width: 100%;
-      min-height: 72px;
-      resize: vertical;
-    }
-    .history-btns {
-      display: flex;
-      gap: 7px;
-      justify-content: flex-end;
-    }
-    #qr-reader {
-      width: 98vw !important;
-      max-width: 360px;
-      margin: 12px auto;
-      display: none;
-      border-radius: 18px;
-      box-shadow: 0 4px 24px #ccc;
-      background: #fafafa;
-      overflow: hidden;
-    }
+    #hoaDon { border: 1px solid #000; border-radius: 8px; padding: 12px; margin-top: 12px; background: #fafafa; }
+    #qr-reader { display:none; margin: 12px auto; max-width: 320px; }
   </style>
 </head>
 <body>
 <div class="container">
   <h2>Thu tiền điện</h2>
-  <div class="row" style="justify-content:center;">
-    <button onclick="document.getElementById('fileInput').click()">Đẩy dữ liệu</button>
+  <div>
+    <button onclick="document.getElementById('fileInput').click()">Đẩy dữ liệu Excel</button>
     <input type="file" id="fileInput" style="display:none" accept=".xls,.xlsx" onchange="docFileExcel(event)">
   </div>
-  <div class="row">
-    <label class="label">Người thu tiền</label>
-    <input id="nguoiThuTien" placeholder="Nhập tên người thu">
+  <div>
+    <label>Người thu tiền:</label>
+    <input id="nguoiThuTien" placeholder="Tên người thu">
   </div>
-  <div class="row">
-    <label class="label">Mã khách hàng</label>
-    <input id="maKH" list="danhSachKH" placeholder="(tìm kiếm)" onkeydown="if(event.key==='Enter'){timKiemMaKH()}">
+  <div>
+    <label>Mã KH:</label>
+    <input id="maKH" list="danhSachKH" placeholder="Nhập hoặc quét mã">
     <datalist id="danhSachKH"></datalist>
     <button onclick="timKiemMaKH()">🔍</button>
     <button onclick="batDauQuetQR()">📷</button>
   </div>
   <div id="qr-reader"></div>
-  <div class="row">
-    <label class="label">Số tiền</label>
+  <div>
+    <label>Số tiền:</label>
     <input id="soTien" readonly>
   </div>
-  <div class="row">
-    <label class="label">Tên KH</label>
+  <div>
+    <label>Tên KH:</label>
     <input id="tenKH" readonly>
   </div>
 
   <div id="hoaDon">
     <div id="hoaDonText">[Hóa đơn sẽ hiển thị tại đây]</div>
-    <div id="qrCodeArea" style="margin-top:12px;text-align:center;"></div>
+    <div id="qrCodeArea" style="text-align:center;margin-top:10px;"></div>
   </div>
 
-  <div class="action-btns">
+  <div style="margin-top:12px;">
     <button onclick="inHoaDon()">In</button>
-    <button style="border:2px solid #000" onclick="xacNhanThu()">Xác nhận đã thu</button>
+    <button onclick="xacNhanThu()" style="border:1px solid #000;">Xác nhận đã thu</button>
   </div>
 
-  <div class="history-area">
+  <div style="margin-top:14px;">
     <label>Lịch sử in</label>
     <textarea id="lichSuIn" readonly></textarea>
-    <label><b>Lịch sử thu</b></label>
+    <label>Lịch sử thu</label>
     <textarea id="lichSuThu" readonly></textarea>
-    <div class="history-btns">
+    <div>
       <button onclick="xuatLichSu('in')">Xuất lịch sử in</button>
       <button onclick="xuatLichSu('thu')">Xuất lịch sử thu</button>
-      <button onclick="xuatLichSuExcel()">Xuất Excel</button>
-      <button onclick="xoaLichSu()">🗑️ Xóa lịch sử</button>
     </div>
   </div>
 </div>
 
 <script>
-let duLieu=[],lichSuIn=JSON.parse(localStorage.getItem('lichSuIn')||'[]'),lichSuThu=JSON.parse(localStorage.getItem('lichSuThu')||'[]');
-const phiCoDinh=2000;
-function formatVND(n){return Number(n).toLocaleString('vi-VN')+' ₫';}
+let duLieu = [], lichSuIn = JSON.parse(localStorage.getItem('lichSuIn')||'[]'), lichSuThu = JSON.parse(localStorage.getItem('lichSuThu')||'[]');
+const phiCoDinh = 2000;
 
+function formatVND(n){ return Number(n).toLocaleString('vi-VN')+' ₫'; }
+
+// Đọc file Excel
 function docFileExcel(event) {
   const file = event.target.files[0];
   const reader = new FileReader();
   reader.onload = (e) => {
     const data = new Uint8Array(e.target.result);
-    const workbook = XLSX.read(data, { type: "array" });
-    const sheet = workbook.Sheets[workbook.SheetNames[0]];
-    duLieu = XLSX.utils.sheet_to_json(sheet).map(row => ({
-      MA_KHTT: String(row.MA_KHTT || row.MA || "").trim().toUpperCase().replace(/(\\.0)$/,""),
-      TEN_KHTT: String(row.TEN_KHTT || row.TEN || "").trim(),
-      TONG_NOP: String(row.TONG_NOP || row.TIEN || "").replace(/[^0-9]/g, "")
-    }));
+    const wb = XLSX.read(data, { type: "array" });
+    const sheet = wb.Sheets[wb.SheetNames[0]];
+    duLieu = XLSX.utils.sheet_to_json(sheet).map(row => {
+      let ma = String(row.MA_KHTT || row.MA || row["Mã KH"] || "").trim();
+      ma = ma.replace(/\\.0$/,"").toUpperCase();
+      let ten = String(row.TEN_KHTT || row.TEN || row["Tên KH"] || "").trim();
+      let tong = String(row.TONG_NOP || row.TIEN || row["Số tiền"] || "").replace(/[^0-9]/g,"");
+      return { MA_KHTT: ma, TEN_KHTT: ten, TONG_NOP: tong };
+    });
+    // Cập nhật datalist
     const dataList = document.getElementById("danhSachKH");
     dataList.innerHTML = "";
-    duLieu.forEach(row => {
-      const option = document.createElement("option");
-      option.value = row.MA_KHTT;
-      dataList.appendChild(option);
+    duLieu.forEach(r=>{
+      const op = document.createElement("option");
+      op.value = r.MA_KHTT;
+      dataList.appendChild(op);
     });
     alert("Đẩy dữ liệu thành công!");
   };
   reader.readAsArrayBuffer(file);
 }
 
+// Tìm mã KH
 function timKiemMaKH(){
-  const ma=document.getElementById('maKH').value.trim();
-  const kh=duLieu.find(r=>r.MA_KHTT===ma);
-  if(!kh){document.getElementById('hoaDonText').textContent='[Không tìm thấy khách hàng]';return;}
-  document.getElementById('tenKH').value=kh.TEN_KHTT;
-  document.getElementById('soTien').value=kh.TONG_NOP;
+  const ma = document.getElementById('maKH').value.trim().toUpperCase();
+  const kh = duLieu.find(r => r.MA_KHTT === ma);
+  if(!kh){ document.getElementById('hoaDonText').textContent = '[Không tìm thấy khách hàng]'; return; }
+  document.getElementById('tenKH').value = kh.TEN_KHTT;
+  document.getElementById('soTien').value = kh.TONG_NOP;
   hienThiHoaDon(ma, kh.TEN_KHTT, kh.TONG_NOP);
 }
 
+// Hiển thị hóa đơn
 function hienThiHoaDon(ma, ten, so){
   const nguoi = document.getElementById('nguoiThuTien').value || '-';
   const tong = Number(so) + phiCoDinh;
   const now = new Date();
-  const t = `Ngày ${now.toLocaleDateString('vi-VN')}, Giờ ${now.toTimeString().slice(0,8)}`;
   const txt = `BIÊN LAI NHẬN TIỀN CHUYỂN KHOẢN
 
 Mã KH: ${ma}
@@ -214,90 +127,67 @@ Tổng tiền: ${formatVND(tong)}
 Người thu tiền: ${nguoi}
 
 ĐÃ NHẬN TIỀN
-${t}`;
+Ngày ${now.toLocaleDateString('vi-VN')}, Giờ ${now.toTimeString().slice(0,8)}`;
 
   document.getElementById('hoaDonText').textContent = txt;
   const qrArea = document.getElementById('qrCodeArea');
   qrArea.innerHTML = '';
-  new QRCode(qrArea, { text: ma, width: 128, height: 128, correctLevel: QRCode.CorrectLevel.H });
+  new QRCode(qrArea, { text: ma, width: 128, height: 128 });
 }
 
-function capNhatLichSu(){
-  document.getElementById('lichSuIn').value=lichSuIn.map(i=>`(${i.thoiGian}) ${i.maKH}-${i.tenKH}: ${formatVND(i.soTien)}`).join('\\n');
-  document.getElementById('lichSuThu').value=lichSuThu.map(i=>`(${i.thoiGian}) ${i.maKH}-${i.tenKH}: ${formatVND(i.soTien)}`).join('\\n');
-}
-
+// In hóa đơn bằng ảnh
 async function inHoaDon(){
   const hoaDonDiv = document.getElementById("hoaDon");
-
-  // Chụp hóa đơn thành ảnh
   const canvas = await html2canvas(hoaDonDiv, { scale: 3, useCORS: true });
   const imgData = canvas.toDataURL("image/png");
 
-  // Lưu lịch sử in
+  // lưu lịch sử in
   const ma=document.getElementById('maKH').value,
         ten=document.getElementById('tenKH').value,
         so=Number(document.getElementById('soTien').value||0)+phiCoDinh;
   lichSuIn.push({maKH:ma,tenKH:ten,soTien:so,thoiGian:new Date().toLocaleString()});
   localStorage.setItem('lichSuIn',JSON.stringify(lichSuIn));
-  capNhatLichSu();
 
-  // Tạo trang in chỉ chứa ảnh
   const win = window.open("", "_blank");
-  win.document.write(\`
-    <html>
-      <head>
-        <title>In Hóa Đơn</title>
-        <style>
-          body, html { margin:0; padding:0; text-align:center; }
-          img { width: 58mm; max-width:100%; }
-        </style>
-      </head>
-      <body>
-        <img src="\${imgData}" />
-        <script>
-          window.onload = function() {
-            window.print();
-            setTimeout(()=>window.close(), 500);
-          }
-        </script>
-      </body>
-    </html>
-  \`);
+  win.document.write(`
+    <html><head><title>In</title>
+    <style>body{text-align:center;margin:0} img{width:58mm;max-width:100%}</style>
+    </head><body>
+    <img src="${imgData}" />
+    <script>window.onload=function(){window.print();setTimeout(()=>window.close(),500);}</script>
+    </body></html>
+  `);
   win.document.close();
 }
 
+// Xác nhận thu
 function xacNhanThu(){
-  const ma=document.getElementById('maKH').value,ten=document.getElementById('tenKH').value,so=Number(document.getElementById('soTien').value||0)+phiCoDinh;
+  const ma=document.getElementById('maKH').value, ten=document.getElementById('tenKH').value;
+  const so=Number(document.getElementById('soTien').value||0)+phiCoDinh;
   lichSuThu.push({maKH:ma,tenKH:ten,soTien:so,thoiGian:new Date().toLocaleString()});
-  localStorage.setItem('lichSuThu',JSON.stringify(lichSuThu));capNhatLichSu();
+  localStorage.setItem('lichSuThu',JSON.stringify(lichSuThu));
 }
 
+// Xuất lịch sử
 function xuatLichSu(loai){
   const arr=loai==='in'?lichSuIn:lichSuThu;
   const txt=arr.map(i=>`(${i.thoiGian}) ${i.maKH}-${i.tenKH}: ${i.soTien}`).join('\\n');
-  const a=document.createElement('a');a.href=URL.createObjectURL(new Blob([txt],{type:'text/plain'}));a.download=\`lich_su_\${loai}.txt\`;a.click();
+  const a=document.createElement('a');
+  a.href=URL.createObjectURL(new Blob([txt],{type:'text/plain'}));
+  a.download=\`lich_su_\${loai}.txt\`;
+  a.click();
 }
 
-function xuatLichSuExcel(){
-  const ws=XLSX.utils.json_to_sheet([...lichSuIn.map(x=>({...x,Loai:'In'})),...lichSuThu.map(x=>({...x,Loai:'Thu'}))]);
-  const wb=XLSX.utils.book_new();XLSX.utils.book_append_sheet(wb,ws,'LichSu');XLSX.writeFile(wb,'lich_su.xlsx');
-}
-
-function xoaLichSu(){
-  if(confirm('Xóa toàn bộ lịch sử?')){lichSuIn=[];lichSuThu=[];localStorage.removeItem('lichSuIn');localStorage.removeItem('lichSuThu');capNhatLichSu();}
-}
-
+// QR code scanner
 let html5QrCode;
 function batDauQuetQR(){
   const region=document.getElementById('qr-reader');region.style.display='block';
   if(!html5QrCode)html5QrCode=new Html5Qrcode('qr-reader');
   html5QrCode.start({facingMode:'environment'},{fps:10,qrbox:250},
     msg=>{document.getElementById('maKH').value=msg;region.style.display='none';html5QrCode.stop();timKiemMaKH();},
-    err=>{}
-  ).catch(()=>{alert('Không mở được camera');region.style.display='none';});
+    err=>{})
+  .catch(()=>{alert('Không mở được camera');region.style.display='none';});
 }
-window.onload=capNhatLichSu;
 </script>
 </body>
 </html>
