--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ function timKiemMaKH() {
 }
 
 function hienThiHoaDon(maKH, tenKH, soTien, sanLuong) {
-  const nguoiThu = "-";
+  const nguoiThu = "Hoan Ngo";
   const tieuDe = "THU TIEN DIEN";
   const phi = 2000;
   const tong = Number(soTien) + phi;
