--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@ function timKiemMaKH() {
 
 function hienThiHoaDon(maKH, tenKH, soTien, sanLuong) {
   const nguoiThu = "Hoan Ngo";
+  const phi = 2000;
   const tieuDe = "THU TIEN DIEN";
   const tong = Number(soTien) + phi;
   const now = new Date();
