--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ function timKiemMaKH() {
 }
 
 function hienThiHoaDon(maKH, tenKH, soTien, sanLuong) {
-  const nguoiThu = "Hoan Ngo";
+  const nguoiThu = "Diu 0985181042";
   const phi = 2000;
   const tieuDe = "THU TIEN DIEN";
   const tong = Number(soTien) + phi;
